# ddf-lakehouse-prototype

./: .adr-dir  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.txt  readme.md
.github/: PULL_REQUEST_TEMPLATE.md
airflow/: condaenv.yml
docs/user/: .rsync-filter  build.sh  index.md  pyproject.toml  requirements.in  requirements.txt
docs/user/source/: conf.py  index.md
docs/user/source/dataplatform_userdocs.egg-info/: PKG-INFO  SOURCES.txt
docs/user/source/docs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/user/source/superset/: charts.md  charts.rst  index.md
pipelines/pipelines-common/: .gitignore  README.md  pyproject.toml  pytest.ini
pipelines/pipelines-common/e2e_tests/: conftest.py
pipelines/pipelines-common/e2e_tests/pipelines/destinations/pyiceberg/: conftest.py  test_pyiceberg_pipeline.py  utils.py
pipelines/pipelines-common/integration_tests/: conftest.py
pipelines/pipelines-common/integration_tests/pipelines/: test_iceberg_pipeline.py  utils.py
pipelines/pipelines-common/integration_tests/pipelines/destinations/pyiceberg/: conftest.py  test_pyiceberg_pipeline.py  utils.py
pipelines/pipelines-common/src/pipelines_common/: cli.py  constants.py  iceberg.py  logging.py  pipeline.py  spark.py
pipelines/pipelines-common/src/pipelines_common/destinations/: __init__.py  filesystem.py  iceberg.py  pyiceberg.py
pipelines/pipelines-common/src/pipelines_common/dlt_destinations/: __init__.py
pipelines/pipelines-common/src/pipelines_common/dlt_destinations/iceberg/: configuration.py  factory.py  iceberg.py
pipelines/pipelines-common/src/pipelines_common/m365/: drive.py  graphapi.py  msgraph.py  sharepoint.py
pipelines/pipelines-common/src/pipelines_common/sharepoint/: msgraph.py  sharepoint.py
pipelines/pipelines-common/src/pipelines_common/utils/: iceberg.py  spark.py
pipelines/pipelines-common/tests/: docker-compose.yml
pipelines/pipelines-common/tests/docker/keycloak/: realm-iceberg.json
pipelines/pipelines-common/tests/e2e_tests/: conftest.py
pipelines/pipelines-common/tests/unit_tests/: conftest.py
pipelines/pipelines-common/tests/unit_tests/dlt_sources/: conftest.py  test_m365.py
pipelines/pipelines-common/tests/unit_tests/m365/: conftest.py  test_drive.py  test_graphapi.py  test_msgraph.py  test_sharepoint.py
pipelines/pipelines-common/tests/unit_tests/sharepoint/: conftest.py  test_msgraph.py  test_sharepoint.py
(+490 files in other folders)
