[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataplatform-userdocs"
version = "0.1.0"
description = "User documentation for the data platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["sphinx>=8.1.3", "sphinx-book-theme>=1.1.3"]

[tool.setuptools.packages.find]
where = ["source"]
include = ["*"]
namespaces = true
