[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipelines-common"
version = "0.1.0"
description = "A set of common utility routines for data pipelines."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[parquet]>=1.10.0,<1.11.0",
    "pyiceberg>=0.9.1,<1.0.0",
    "pyiceberg-core>=0.4.0,<0.5.0",
    "s3fs==2025.3.2",
]

[dependency-groups]
dev = ["pytest>=8.3.5,<8.4.0"]
