[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipelines-common"
version = "0.1.0"
description = "A set of common utility routines for data pipelines."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[parquet,s3]>=1.10.0,<1.11.0",
    "lock>=2018.3.25.2110",
    "msgraphfs>=0.1,<0.2",
    "pyiceberg>=0.9.1,<1.0.0",
    "pyiceberg-core>=0.4.0,<0.5.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.9.1,<3",
    "pytest>=8.3.5,<8.4.0",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.14.1,<3.15",
    "requests>=2.32.3,<2.33",
    "requests-mock>=1.12.1",
    "ruff>=0.11.11,<0.12",
]

[tool.ruff]
line-length = 100
